// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel ACT theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary css-vcfoys-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ACT_ET theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary css-1oykn1l-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary css-z5mzf4-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;
